# ChangeLog for virtual/perl-File-Spec
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-File-Spec/ChangeLog,v 1.113 2015/04/11 17:42:45 zlogene Exp $

  11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  ppc64 stable wrt bug #545510

  11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  ppc stable wrt bug #545510

  08 Apr 2015; Jeroen Roovers <jer@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  Stable for HPPA (bug #545510).

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  sparc stable wrt bug #545510

  05 Apr 2015; Mike Frysinger <vapier@gentoo.org>
  perl-File-Spec-3.400.0-r2.ebuild, perl-File-Spec-3.480.0.ebuild,
  perl-File-Spec-3.480.100-r1.ebuild:
  Mark arm64/ia64/m68k/s390/sh stable.

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  arm stable wrt bug #545510

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  x86 stable wrt bug #545510

  04 Apr 2015; Mike Frysinger <vapier@gentoo.org> perl-File-Spec-3.480.0.ebuild:
  Mark arm64/m68k/s390/sh stable.

  04 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  alpha stable wrt bug #545510

  04 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-File-Spec-3.480.100-r1.ebuild:
  amd64 stable wrt bug #545510

  21 Feb 2015; Michał Górny <mgorny@gentoo.org>
  -perl-File-Spec-3.480.100.ebuild:
  Transfer stable keywords and drop old

*perl-File-Spec-3.480.100-r1 (21 Feb 2015)

  21 Feb 2015; Michał Górny <mgorny@gentoo.org>
  +perl-File-Spec-3.480.100-r1.ebuild:
  Revbump the virtuals where dependencies have been changed

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> perl-File-Spec-3.480.0.ebuild:
  Stable for alpha, wrt bug #536790

  17 Feb 2015; Markus Meier <maekke@gentoo.org> perl-File-Spec-3.480.0.ebuild: