@@ -1,17 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD perl-File-Spec-3.400.0-r2.ebuild 775 SHA256 0ab853c89e77ca3fdb61b10f98e1110c47aa716299c4db96f981af37c4be2b56 SHA512 b2b9220c0231b8eed19aff6f8677a854acd54f66f9b97266dc5b5f3365fb84038a746fb8ee185975dd5e589b7ce6932b5e51cb4445b82ad31b3562cec381827e WHIRLPOOL 13e34ef73daf5f50c7484bbf061c6b7ccd0dbb995cd79cc7f4fe0d1be031831c227d056baba89d78e88f855cce1afdd45921a50df4765da8807871164de18622
-EBUILD perl-File-Spec-3.480.0.ebuild 775 SHA256 7ec08b268417b50e05c1bb61342103fdebf21d3f41996bee6f308898f3e6fd11 SHA512 e5984ec689838e66eda0590d78114f8a74abcfcac99d647363ea6e2d3fb4e66d5abd6f5220c0dc5b4d1005a1fe98d1e849ac065e756d1715ccd7eb1fc83a181c WHIRLPOOL bec775cb4c68ba4fa797f84741dffe620284036d11b5e5d22cd432ee60ec99db461c61b6392f172a3676b5301353a13cda51ddb68be7c5b8f7e128aae6b0cf78
 EBUILD perl-File-Spec-3.480.100-r1.ebuild 781 SHA256 e2e2e25c808c599442cec7beb8c4479cd23d81632cea85e3ddff1fc8be4c6172 SHA512 03c4a823278ec4c78724d0bed1d5b7e448aacae66c17260dac25972ff37cc18f07978136367d206d144373daaa58c0ca7bfc850301254656375f6bda488b816b WHIRLPOOL 4671d43f719d95484055b273c1a377d119b0f6192aec7a63904bf84aec18e184ddaa649a9ff300cc97c271eb265a524d1ce0ec1a6f925b64eed863cb2522ae45
-MISC ChangeLog 14674 SHA256 a3f3949caf385c294928415710426ccb2ca6b8549e77dee55d229341fc372860 SHA512 fcf58354ae6597c3235fd47779c09b9a45f4c267582db3eb1680b592cdd3f1995d19edf0fef68e95500b4717d432f4d9bb9ebf7b8b467025c6df352dcc6f84df WHIRLPOOL c8f87d30bb9473fd93de4eb3ea4e1f9327ccaa3d58b97b0e50bf369cb5493cf4b82d8051f7c4c4d9c43b613e65e341bdcd1893f929a83c9a0295d9f1ebdec2e7
+EBUILD perl-File-Spec-3.560.0.ebuild 788 SHA256 e6b2050a0e4a75a4a03f7cd4d98791bc4fa54434a57dbebea6b5fdcbe211215c SHA512 913ae49efa6124ce994951a3efb80b26f3276798b755fcee2b52d42135e9c805fe792e37facc6ded634682e083928ef7913c6b95533f904e85a3fc64e44f208c WHIRLPOOL 5f881dc7567c10daec0b99abc3993df9386fb6eae86329af264aa50672721b30a57ae2d3580387098aa0069826894006cc5ae5f3804df6bef93ab2b9b63bd038
+MISC ChangeLog 14912 SHA256 d35abcc246019d359be7bd747d85c619d901fffc72a361edcad5fd0586f9e78c SHA512 935427fe0da94eb6088ae9457d8c64c928dbc133434c59764e1bc96a89b8c9fafcc8b23bf5ffad547f48df1ac5f1ca088c45976ce94c7df96fc6c8c440f6a3c3 WHIRLPOOL 6a07bc8362b8d8b96debddaaae47d9b15896e638447bc0096302f3a3db106c489f2bfafed5a308d0c26d596c16dbe150572937e6bb293e39d1c19f779232426f
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlUpXKQACgkQG9wOWsQutdYTbwQAkIzlxXl9YH4Ab7+HbLPTLJum
-ReGEnoWvj7qQZVmXs9Bl3OtLYFPnEiMUU8SOOOCsIUkSI3A4Q9b02D3bp009PA1s
-sZh4PaG8hNaXbQ3OQAZEFJJwEL1Gv2kOm5A74K2l8HhG368++Tz4dQyJKyh2RQI8
-6ISqeS6aS9OKYUanFuc=
-=2uYC
+iQJ8BAEBCABmBQJVcixWXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d5cc0QAMv/Zlao20Pp94xTMa1315gD
+cYRFQdijsYtBpy9kqM7nMb2fslwo+d/yss9ug59wjnRtKA4o3FgU84mLJOw2B0D6
+YXauVTknDPwKk+9sC+eg0J57NEMJP7dbRtBP79WAw4BhOuJjCnWm36/5tPk9RKgQ
+/Fs7oa6Hz1+eFnMuBgTqZ2DsEQUK4BvpOrvOBqrXciKi44NgqyQorXPxSovJtzPF
+T07TkAuZd9g1gayqXAwSwSqUHB8aTQfRcVNV+5MKbjv8/EAwMlB6XpL90E4OfQYB
+QHQOg/nVgZ/hRai6vlsSqVOtLYpvomu8G+TojJ6dbSdKbOMh8VRqfFJY9DrDm26Z
+DmvwZVhwu0RYCmzfstg65R0fjGR8M+4T2n0cVCrwN8LwfNJoDuECwc27jRMCEHQ9
+nrXAtLIYsEEz9aJGFVPwc9BcVHQ3/+LIbiFx3g9Bn7ATwqVLBEnp26xd5bxo7j70
+D+gULSc3sTX1imy0/AeDbxj69ZDO2SKhefmI3CVV1sy3KTIDVZdppaQfHXZ/zZxy
+CkVFkNTUeZAnJFwOlx507dVW918u9qqIQqFS56Ija2Py42nmcZQHhEaUzr20eawG
+hno9bSjtWrWeC9DsULNuqmNyLJh/UMyrvdkfsxtFEv7cwdss7jma7g3IriAZPq6V
+xZQ0qcjt7+4fd6rI7dQG
+=zMA3
 -----END PGP SIGNATURE-----
