@@ -1,6 +1,13 @@
 # ChangeLog for virtual/perl-File-Spec
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-File-Spec/ChangeLog,v 1.113 2015/04/11 17:42:45 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-File-Spec/ChangeLog,v 1.114 2015/06/05 23:10:13 dilfridge Exp $
+
+*perl-File-Spec-3.560.0 (05 Jun 2015)
+
+  05 Jun 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  -perl-File-Spec-3.400.0-r2.ebuild, -perl-File-Spec-3.480.0.ebuild,
+  +perl-File-Spec-3.560.0.ebuild:
+  Add Perl 5.22 version, remove old
 
   11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org>
   perl-File-Spec-3.480.100-r1.ebuild:
